<resources>
    <string name="app_name">Projet_integration</string>
    <string name="inscription">inscription</string>
    <string name="title_activity_file_actualite">file_actualite</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="textview">TextView</string>
    <string name="date_publication">date8publication</string>
    <string name="Date_publication">Date_publication</string>
    <string name="image_publication">image publication</string>
    <string name="Date_publication_commentaire">Date_publication_commentaire</string>
    <string name="text_commentaire">text_commentaire</string>
    <string name="commenter">Commenter</string>
    <string name="visualier_la_photo">visualier la photo</string>
    <string name="publier">Publier</string>
    <string name="nouvelle_publication">Nouvelle publication</string>
    <string name="contenu">Contenu</string>
    <string name="photo">Photo</string>
    <string name="todo">TODO</string>
    <string name="titre">Titre :</string>
    <string name="commenter2">commenter</string>
    <string name="ecrire_les_commentaire">ecrire les commentaire</string>
    <string name="prendre_une_photo">prendre une photo</string>
    <string name="ajouter_une_photo">ajouter une photo</string>
</resources>
