<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nassim.projet_integration.MainActivity">

    <Button
        android:id="@+id/makeCommentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/commenter2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/makeCommentText"
        android:layout_width="374dp"
        android:layout_height="480dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/text_commentaire"
        android:hint="@string/ecrire_les_commentaire"
        android:ems="10"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"
        tools:targetApi="o"
        app:layout_constraintBottom_toTopOf="@+id/makeCommentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>