<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Commentaires">


    <ImageView
        android:id="@+id/image_pub"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/todo"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/ic_launcher" />

    <ListView
        android:id="@+id/comment_listView_id"
        android:layout_width="match_parent"
        android:layout_height="408dp"
        android:layout_marginTop="8dp"
        android:descendantFocusability="blocksDescendants"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/image_pub"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/fullScreanImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.4"
        android:text="@string/visualier_la_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/comment_listView_id"
        app:layout_constraintVertical_bias="0.933" />

    <Button
        android:id="@+id/addComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.4"
        android:text="@string/commenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fullScreanImageButton"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/comment_listView_id"
        app:layout_constraintVertical_bias="0.933" />

</android.support.constraint.ConstraintLayout>